# mjcli

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  dist-workspace.toml
.github/workflows/: ci.yml  docker.yml
mj/: .gitignore  Cargo.toml
mj/.claude/: settings.local.json
mj/src/: args.rs  main.rs  render.rs  util.rs
mj/src/psql/: better_auth.rs  mod.rs
mj/src/render/: exit.rs  init.rs  mod.rs
mj/src/render/shared/: auth.rs
