[package]
name = "mj"
version = "0.2.0"
edition = "2024"
description = "Development utilities CLI"
license = "GPL-3.0-only"
repository = "https://github.com/mjiraboondilok/mjcli"
readme = "../README.md"

[dependencies]
rpassword = "7"
tempfile = "3"
ureq = { version = "3", default-features = false, features = ["rustls"] }

[profile.dist]
inherits = "release"
lto = "thin"
