[package]
name = "mj"
version = "0.2.2"
edition = "2024"
description = "Development utilities CLI"
license = "GPL-3.0-only"
repository = "https://github.com/mjiraboondilok/mjcli"
readme = "../README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.10"
rpassword = "7"
scrypt = { version = "0.12", default-features = false, features = ["alloc"] }
tempfile = "3"
ureq = { version = "3", default-features = false, features = ["rustls"] }

[profile.dist]
inherits = "release"
lto = "thin"
